azure/ApplyArmTemplate/Dev-Mgmt/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "networkSecurityGroups_VF_AZDEV_VC05_MGMT_QUARANTINE_NSG_name": {
            "defaultValue": "VF-AZDEV-VC05-MGMT-QUARANTINE_NSG",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-11-01",
            "name": "[parameters('networkSecurityGroups_VF_AZDEV_VC05_MGMT_QUARANTINE_NSG_name')]",
            "location": "eastus2",
            "properties": {
                "securityRules": [
                    {
                        "name": "VF-AZDEV-APPS-Incoming-Allow-TCP-22-PAM",
                        "properties": {
                            "description": "Allow TCP/22 DNS From PAM appliances (167.64.247.68/31)",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 1002,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [
                                "167.64.247.68/31"
                            ],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "VF-AZDEV-APPS-Incoming-Allow-TCP-3389",
                        "properties": {
                            "description": "Allow TCP/3389 DNS From VF Network",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 1003,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [
                                "10.0.0.0/8"
                            ],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "VF-AZDEV-APPS-Incoming-Allow-TCP-22",
                        "properties": {
                            "description": "Allow TCP/22 DNS From VF Network",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 1001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [
                                "10.0.0.0/8"
                            ],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "VF-AZDEV-DMZ-Outgoing-Deny-Access-CatchAll-Rule",
                        "properties": {
                            "description": "Block All Other Traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4096,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2019-11-01",
            "name": "[concat(parameters('networkSecurityGroups_VF_AZDEV_VC05_MGMT_QUARANTINE_NSG_name'), '/VF-AZDEV-APPS-Incoming-Allow-TCP-22')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_VF_AZDEV_VC05_MGMT_QUARANTINE_NSG_name'))]"
            ],
            "properties": {
                "description": "Allow TCP/22 DNS From VF Network",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 1001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [
                    "10.0.0.0/8"
                ],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2019-11-01",
            "name": "[concat(parameters('networkSecurityGroups_VF_AZDEV_VC05_MGMT_QUARANTINE_NSG_name'), '/VF-AZDEV-APPS-Incoming-Allow-TCP-22-PAM')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_VF_AZDEV_VC05_MGMT_QUARANTINE_NSG_name'))]"
            ],
            "properties": {
                "description": "Allow TCP/22 DNS From PAM appliances (167.64.247.68/31)",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 1002,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [
                    "167.64.247.68/31"
                ],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2019-11-01",
            "name": "[concat(parameters('networkSecurityGroups_VF_AZDEV_VC05_MGMT_QUARANTINE_NSG_name'), '/VF-AZDEV-APPS-Incoming-Allow-TCP-3389')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_VF_AZDEV_VC05_MGMT_QUARANTINE_NSG_name'))]"
            ],
            "properties": {
                "description": "Allow TCP/3389 DNS From VF Network",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 1003,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [
                    "10.0.0.0/8"
                ],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2019-11-01",
            "name": "[concat(parameters('networkSecurityGroups_VF_AZDEV_VC05_MGMT_QUARANTINE_NSG_name'), '/VF-AZDEV-DMZ-Outgoing-Deny-Access-CatchAll-Rule')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_VF_AZDEV_VC05_MGMT_QUARANTINE_NSG_name'))]"
            ],
            "properties": {
                "description": "Block All Other Traffic",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Deny",
                "priority": 4096,
                "direction": "Outbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        }
    ]
}
